# HzyChat

./: .gitignore  CMakeLists.txt  global.cpp  global.h  http_mgr.cpp  http_mgr.h  icon.rc  login_dialog.cpp  login_dialog.h  login_dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oh-my-posh  rc.qrc  register_dialog.cpp  register_dialog.h  register_dialog.ui  singleton.h  util.cpp  util.h
sytle/: stylesheet.qss
